# DenialRx-Pilot

./: .editorconfig  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MODEL_CARD.md  Makefile  README.md  RUNBOOK.md  RUNLOG.md  app.py  docker-compose.yml  firebase.json  firestore.rules  index.html  instrumentation.ts  middleware.ts  next.config.js  openapi.yaml  otel.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.app.json  tsconfig.json
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+3 more)
app/: config.py  globals.css  layout.tsx  logging.py  main.py  models.py  providers.tsx
artifacts/: denial_xgb.json  predictions.csv  shap_values.csv
constants/: denialDatabase.ts  mockClaims.ts
data/: synthetic_claims.csv
docs/: ops.md
infra/: README.md
lib/: data.ts  logging.ts  metrics.ts
phase_runner/: __init__.py  cli.py
reports/: RUN_SUMMARY.md  evaluation_report.json  evaluation_report.md
scripts/: generate_synthetic_data.py  phi_scan.py  run_phase_runner.py
src/: index.css  main.tsx
tests/: README.md  conftest.py  dashboard.spec.ts  firestore.rules.test.ts  test_api.py  test_cli.py  test_condition_evaluator.py  test_docker_compose.py  test_evidence_pack.py  test_executor.py  test_feature_store.py  test_loader.py  test_phi_checks.py  test_rules.py  test_schema_validation.py  test_templates.py  test_training_pipeline.py
tools/: pii_scan.py
types/: access.ts  billing.ts
(+103 files in other folders)
